# dh_comms

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  Readme.md  buffer.cpp  buffer.h  dh_comms.cpp  dh_comms.h  dh_comms_dev.h  hip_utils.h  memory_heatmap.cpp  memory_heatmap.h  message_processor_base.h  packet.cpp  packet.h  test.cpp
.agents/: project.json
.agents/bootstrap/: amplify-installation-report.md
.agents/kt/: architecture.md  device_api.md
.agents/kt.archive/: handlers.md  host_api.md
.agents/pm/: pm-current-state.md  pm-index.md
.agents/pm/units/: architecture.md  device-api.md  handlers.md  host-api.md
doc/: CMakeLists.txt
examples/: CMakeLists.txt
examples/src/: bank_conflicts_example.cpp  heatmap_example.cpp  memory_alignment_example.cpp
include/: data_headers.h  data_headers_dev.h  dh_comms.h  dh_comms_dev.h  gpu_arch_constants.h  hip_runtime_loader.h  hip_utils.h  json_output.h  memory_analysis_handler.h  memory_heatmap.h  message.h  message_handlers.h  message_processor_base.h  time_interval_handler.h  utils.h
src/: data_headers.cpp  dh_comms.cpp  dummy_kernel.cpp  hip_runtime_loader.cpp  json_output.cpp  memory_analysis_handler.cpp  memory_heatmap.cpp  message.cpp  message_handlers.cpp  time_interval_handler.cpp
